# python-html-splitter

./: .gitignore  README.md  msg_split.py  pyproject.toml
python_html_splitter/: __init__.py  config.py  main.py  models.py  splitter.py  utils.py
src/python_html_splitter/: models.py
tests/: expected.py  test_splitter.py
