[project]
name = "python-html-splitter"
version = "0.1.0"
description = "Just python html splitter :)"
authors = [
    {name = "Nikita Dushakov",email = "sir555nd@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [{include = "python_html_splitter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
